[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/city.png" type="Texture" id=1]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://SettingsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://EveningStarSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://StarSpot.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.963
margin_top = -287.471
margin_right = 53.0372
margin_bottom = 168.529
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 430.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Play"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 430.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 248.0
margin_right = 430.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 1 )
text = "Credits"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 372.0
margin_right = 430.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="ExtraSky" type="ColorRect" parent="."]
margin_top = -768.0
margin_right = 1024.0
color = Color( 0.00392157, 0.156863, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EveningStarSpot" parent="." instance=ExtResource( 6 )]
show_circle = false

[node name="CollisionShape2D" parent="EveningStarSpot" index="0"]
shape = SubResource( 2 )

[node name="EveningStarSprite" parent="EveningStarSpot" instance=ExtResource( 5 )]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="setting_change" from="SettingsMenu" to="." method="_on_SettingsMenu_setting_change"]

[editable path="EveningStarSpot"]
